--- a/app/views/browse.jade
+++ b/app/views/browse.jade
@@ -59,35 +59,35 @@ html
 						if sort == 'view'
 							.ui.active.inverted.button View
 						else
-							a.ui.inverted.button(href="/browse?sort=view&order=#{order}&filter=#{filter}") View
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=view&order=#{order}&filter=#{filter}") View
 
 						if sort == 'like'
 							.ui.active.inverted.button Like
 						else
-							a.ui.inverted.button(href="/browse?sort=like&order=#{order}&filter=#{filter}") Like
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=like&order=#{order}&filter=#{filter}") Like
 
 						if sort == 'comm'
 							.ui.active.inverted.button Comm
 						else
-							a.ui.inverted.button(href="/browse?sort=comm&order=#{order}&filter=#{filter}") Comm
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=comm&order=#{order}&filter=#{filter}") Comm
 
 						if sort == 'date'
 							.ui.active.inverted.button Date
 						else
-							a.ui.inverted.button(href="/browse?sort=date&order=#{order}&filter=#{filter}") Date
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=date&order=#{order}&filter=#{filter}") Date
 					.ui.icon.buttons
 						if order == 'desc'
 							.ui.active.inverted.button
 								i.sort.content.descending.icon
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=desc&filter=#{filter}")
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=desc&filter=#{filter}")
 								i.sort.content.descending.icon
 
 						if order == 'asc'
 							.ui.active.inverted.button
 								i.sort.content.ascending.icon
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=asc&filter=#{filter}")
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=asc&filter=#{filter}")
 								i.sort.content.ascending.icon
 
 				.eight.wide.column
@@ -96,24 +96,24 @@ html
 						| Filter:
 					.ui.buttons
 						if filter == 'gpusound'
-							a.ui.active.inverted.button(href="/browse?sort=#{sort}&order=#{order}") GPU Sound
+							a.ui.active.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}") GPU Sound
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=#{order}&filter=gpusound") GPU Sound
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}&filter=gpusound") GPU Sound
 
 						if filter == 'microphone'
-							a.ui.active.inverted.button(href="/browse?sort=#{sort}&order=#{order}") Microphone
+							a.ui.active.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}") Microphone
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=#{order}&filter=microphone") Microphone
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}&filter=microphone") Microphone
 
 						if filter == 'musicinput'
-							a.ui.active.inverted.button(href="/browse?sort=#{sort}&order=#{order}") Music Input
+							a.ui.active.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}") Music Input
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=#{order}&filter=musicinput") Music Input
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}&filter=musicinput") Music Input
 
 						if filter == 'webcamera'
-							a.ui.active.inverted.button(href="/browse?sort=#{sort}&order=#{order}") Web Camera
+							a.ui.active.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}") Web Camera
 						else
-							a.ui.inverted.button(href="/browse?sort=#{sort}&order=#{order}&filter=webcamera") Web Camera
+							a.ui.inverted.button(href="/browse?keyword=#{keyword}&sort=#{sort}&order=#{order}&filter=webcamera") Web Camera
 
 		script#tmpl-info(type='text/x-tmpl')
 			span.ellipsis.right1char
