--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -37,18 +37,16 @@ html
 				.eight.wide.column#left
 					.row#canvasWrapper
 						canvas#canvas
-						i.backward.icon
-						span &nbsp;&nbsp;
-						i.pause.icon
-						span &nbsp;&nbsp;
-						span 0s&nbsp;&nbsp;
-						span 60FPS&nbsp;&nbsp;
+						i.backward.icon.right1em
+						i.pause.icon.right1em
+						span.right1em 0s
+						span.right1em 60FPS
 						i.maximize.icon
 					.row.note
 						h1 #{shader.info.name}
 					.row.float-right
 						i.unhide.icon
-						span #{shader.info.viewed}&nbsp;&nbsp;
+						span.right1em #{shader.info.viewed}
 						i.heart.icon
 						span #{shader.info.likes}
 					.row
