--- a/public/css/common.less
+++ b/public/css/common.less
@@ -85,6 +85,7 @@
 .right1char {
 	margin-right: 0.5rem !important;
 }
+
 .right1em {
 	margin-right: 1rem !important;
 }
@@ -102,4 +103,12 @@
 
 .top1char {
 	margin-top: 0.5rem !important;
+}
+
+.float-right {
+	float: right;
+}
+
+.pointer {
+	cursor: pointer;
 }
