--- a/public/css/view.less
+++ b/public/css/view.less
@@ -1,19 +1,35 @@
 @charset "UTF-8";
 
-#content {
-	margin-top: 1rem;
-}
-
 canvas#canvas {
 	background-color: black;
-	height: 50vh;
 	width: 100%;
-	cursor: pointer;
-	border-radius: 0.5rem 0.5rem 0 0;
+	height: 100%;
+	cursor: move;
+	border-radius: 2/7rem 2/7rem 0 0;
+	vertical-align: bottom;
+	&:-webkit-full-screen {
+		height: 100vh;
+		width: 100vw;
+	}
+	&:-moz-full-screen {
+		height: 100vh;
+		width: 100vw;
+	}
+	&:-ms-fullscreen {
+		height: 100vh;
+		width: 100vw;
+	}
+	&:fullscreen {
+		height: 100vh;
+		width: 100vw;
+	}
 }
 
-.float-right {
-	float: right;
+#control {
+	font-size: 1.2em;
+	line-height: 2em;
+	border-radius: 0 0 2/7rem 2/7rem;
+	background-color: #0d3349;
 }
 
 #editor {
@@ -25,96 +41,10 @@ canvas#canvas {
 	right: 0;
 }
 
-#canvasWrapper {
-	border-radius: 0.5rem;
-	background-color: #0d3349;
-}
-
 .note {
 	margin-top: 1rem;
 }
 
-.hidden.menu {
-	display: none;
-}
-
 .masthead.segment {
 	min-height: 700px;
-	padding: 1em 0em;
-}
-.masthead .logo.item img {
-	margin-right: 1em;
-}
-.masthead .ui.menu .ui.button {
-	margin-left: 0.5em;
-}
-.masthead h1.ui.header {
-	margin-top: 3em;
-	margin-bottom: 0em;
-	font-size: 4em;
-	font-weight: normal;
-}
-.masthead h2 {
-	font-size: 1.7em;
-	font-weight: normal;
-}
-
-.ui.vertical.stripe {
-	padding: 8em 0em;
-}
-.ui.vertical.stripe h3 {
-	font-size: 2em;
-}
-.ui.vertical.stripe .button + h3,
-.ui.vertical.stripe p + h3 {
-	margin-top: 3em;
-}
-.ui.vertical.stripe .floated.image {
-	clear: both;
-}
-.ui.vertical.stripe p {
-	font-size: 1.33em;
-}
-.ui.vertical.stripe .horizontal.divider {
-	margin: 3em 0em;
-}
-
-.quote.stripe.segment {
-	padding: 0em;
-}
-.quote.stripe.segment .grid .column {
-	padding-top: 5em;
-	padding-bottom: 5em;
-}
-
-.footer.segment {
-	padding: 5em 0em;
-}
-
-.secondary.pointing.menu .toc.item {
-	display: none;
-}
-
-@media only screen and (max-width: 700px) {
-	.ui.fixed.menu {
-		display: none !important;
-	}
-	.secondary.pointing.menu .item,
-	.secondary.pointing.menu .menu {
-		display: none;
-	}
-	.secondary.pointing.menu .toc.item {
-		display: block;
-	}
-	.masthead.segment {
-		min-height: 350px;
-	}
-	.masthead h1.ui.header {
-		font-size: 2em;
-		margin-top: 1.5em;
-	}
-	.masthead h2 {
-		margin-top: 0.5em;
-		font-size: 1.5em;
-	}
 }
