--- a/public/css/common.less
+++ b/public/css/common.less
@@ -101,14 +101,39 @@
 	margin-top: 1rem !important;
 }
 
+.top2em {
+	margin-top: 2rem !important;
+}
+
 .top1char {
 	margin-top: 0.5rem !important;
+}
+
+.bottom1char {
+	margin-bottom: 0.5rem !important;
 }
 
 .float-right {
 	float: right;
 }
 
+.align-right {
+	text-align: right;
+}
+
 .pointer {
 	cursor: pointer;
+}
+
+.userlink {
+	color: white;
+	font-weight: bold;
+}
+
+.onehalf {
+	font-size: 1.5rem;
+}
+
+.double {
+	font-size: 2rem;
 }
