--- a/public/css/view.less
+++ b/public/css/view.less
@@ -4,7 +4,7 @@ canvas#canvas {
 	background-color: black;
 	width: 100%;
 	height: 100%;
-	cursor: move;
+	cursor: pointer;
 	border-radius: 2/7rem 2/7rem 0 0;
 	vertical-align: bottom;
 	&:-webkit-full-screen {
@@ -41,10 +41,13 @@ canvas#canvas {
 	right: 0;
 }
 
-.note {
-	margin-top: 1rem;
-}
-
 .masthead.segment {
 	min-height: 700px;
+}
+
+#comments {
+	color: white !important;
+	* {
+		color: white;
+	}
 }
