--- a/public/css/common.less
+++ b/public/css/common.less
@@ -137,3 +137,18 @@
 .double {
 	font-size: 2rem;
 }
+
+.height80 {
+	height: 80vh;
+}
+
+.border0 {
+	border: 0 !important;
+	* {
+		border: 0 !important;
+	}
+}
+
+.padding0 {
+	padding: 0 !important;
+}
