--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -42,7 +42,7 @@ html
 							pre #{error}
 
 				.ui.message.inverted
-					| Already have account?
+					| New to us?
 					a(href='/register').left1char Register
 
 		script(src='/static/components/jquery/dist/jquery.min.js')
