--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -22,15 +22,18 @@ html
 					a.item.VisbyRoundCF.nav-logo(href='/') ShaderStudio
 					a.item(href='/') Home
 					a.item(href='/browse') Browse
-					a.active.item(href='/create') Create
-					a.item(href='/live') Live
+					a.item(href='#') Create
+					a.item(href='#') Live
 					.ui.category.search.item
 						.ui.icon.input
 							input.prompt(type='text', placeholder='Search ShaderStudio')
-							i.search.link.icon
+							i.search.link.icon.searchbutton
 						.results
 					.right.item
-						a.ui.inverted.button Login
+						if user
+							a.ui.inverted.button #{user.username}
+						else
+							a.ui.inverted.button(href='/login') Login
 
 			.ui.stackable.grid.container.top1em
 				.eight.wide.column#left
@@ -81,7 +84,7 @@ html
 						button.ui.right.labeled.icon.teal.button.left1em#run
 							i.right.arrow.icon
 							| Run
-						button.ui.right.labeled.icon.violet.button.disabled
+						button.ui.right.labeled.icon.violet.button
 							i.save.icon
 							| Save
 					.ui.inverted.accordion#tooltip
