--- a/app/views/register.jade
+++ b/app/views/register.jade
@@ -46,7 +46,7 @@ html
 							pre #{error}
 
 				.ui.message.inverted
-					| Already have account?
+					| Just come back?
 					a(href='/login').left1char Login
 
 		script(src='/static/components/jquery/dist/jquery.min.js')
