add condition comment to bsie

--- a/app/views/view.jade
+++ b/app/views/view.jade
@@ -15,6 +15,7 @@ html
 		link(rel='stylesheet' href='/static/css/view.css')
 		link(rel='icon' href='/static/img/favicon.ico')
 
+		include bsie.jade
 	body
 		.ui.inverted.vertical.masthead.aligned.segment.interactive
 			.ui.container
