--- a/app/views/browse.jade
+++ b/app/views/browse.jade
@@ -14,6 +14,7 @@ html
 		link(rel='stylesheet' href='/static/css/browse.css')
 		link(rel='icon' href='/static/img/favicon.ico')
 
+		include bsie.jade
 	body
 		.ui.inverted.vertical.masthead.center.aligned.segment.interactive
 			.ui.container
