--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -14,6 +14,7 @@ html
 		link(rel='stylesheet' href='/static/css/index.css')
 		link(rel='icon' href='/static/img/favicon.ico')
 
+		include bsie.jade
 	body
 		//- Following Menu
 		.ui.large.top.fixed.hidden.menu
